added multiple lists and an image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
     <h6>Learning html</h6>
     <h1>David Charles</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores iste voluptates expedita! Dignissimos voluptatibus temporibus eaque assumenda labore! Porro laudantium nisi itaque, doloribus sed amet sequi fuga omnis dolorum repellat.</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>PHP</li>
+        <li>SQL</li>
+    </ul>
+    <p>Area councils in Abuja</p>
+    <ol>
+        <li>AMAC</li>
+        <li>Abaji</li>
+        <li>Gwagwalada</li>
+        <li>Bwari</li>
+        <li>Kuje</li>
+        <li>Kwali</li>
+    </ol>
+    <img src="wolves.jpg" alt="wolf_image">
 </body>
 </html>
