Added more html pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header background-color="red" display="flex">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="gallary.html">Gallery</a>
+    </header>
     <h6>Learning html</h6>
     <h1>David Charles</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores iste voluptates expedita! Dignissimos voluptatibus temporibus eaque assumenda labore! Porro laudantium nisi itaque, doloribus sed amet sequi fuga omnis dolorum repellat.</p>
@@ -25,6 +31,8 @@
         <li>Kuje</li>
         <li>Kwali</li>
     </ol>
-    <img src="wolves.jpg" alt="wolf_image">
+    <img src="wolves.jpg" alt="wolf_image" width="100%">
+    <a href="www.facebook.com">facebook</a>
+    <a href="about.html">Aboutpage</a>
 </body>
 </html>
