corrected the issue with facebook

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Kwali</li>
     </ol>
     <img src="wolves.jpg" alt="wolf_image" width="100%">
-    <a href="www.facebook.com">facebook</a>
+    <a href="https://facebook.com" target="_blank">facebook</a>
     <a href="about.html">Aboutpage</a>
 </body>
 </html>
